--- a/src/components/UI/MenuToggle/MenuToggle.css
+++ b/src/components/UI/MenuToggle/MenuToggle.css
@@ -1,11 +1,10 @@
-.Logo {
-    background-color: white;
+.MenuToggle {
     padding: 8px;
     height: 100%;
     box-sizing: border-box;
     border-radius: 5px;
 }
 
-.Logo img {
+.MenuToggle img {
     height: 100%;
 }
