--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -9,6 +9,13 @@
     padding: 10px 0;
 }
 
+@media (max-height: 499px) {
+    .BuildControls {
+        width: 50%;
+        padding: 5px;
+    }
+}
+
 .OrderButton {
     background-color: #DAD735;
     outline: none;
@@ -19,6 +26,13 @@
     font-size: 1.2em;
     padding: 15px 30px;
     box-shadow: 2px 2px 2px #966909;
+}
+
+@media (max-height: 499px) {
+    .OrderButton {
+        font-size: 1em;
+        padding: 10px 20px;
+    }
 }
 
 .OrderButton:hover, .OrderButton:active {
