--- a/src/components/CheckoutSummary/CheckoutSummary.css
+++ b/src/components/CheckoutSummary/CheckoutSummary.css
@@ -7,7 +7,7 @@
 
 @media (min-width: 600px) {
     .CheckoutSummary {
-        width: 500px;
+        width: 80%;
         font-size: 16px;
     }
 }
